--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: > # this means to ignore newlines until "show_excerpts:"
   เป็นเว็บ ตรง มั่นคง และ ปลอดภัย สามารถเล่นได้บนมือถือ
   พร้อมทั้งโปรโมชั่นสุดพิเสษและ กิจกรรมดีๆอีกมากมาย
 baseurl: "/"
-url: https://cookie-demo.netlify.app # change this URL, this is needed for generating right sitemap
+url: https://ufapro888.netlify.app # change this URL, this is needed for generating right sitemap
 
 permalink: "/blog/:title/"
 
@@ -33,7 +33,7 @@ jekyll-minifier:
     harmony: true
 
 soopr:
-  publish_token: "" # sign up at https://www.soopr.co to get your publish token and personalize share and reaction options
+  publish_token: "qVe6vfoozhRTgn21G5xSnBc7" # sign up at https://www.soopr.co to get your publish token and personalize share and reaction options
 
 exclude:
   - Gemfile
